--- a/packages/fluentui/docs/src/pages/Layout.mdx
+++ b/packages/fluentui/docs/src/pages/Layout.mdx
@@ -47,12 +47,7 @@ You can learn more in [Flex component docs](/components/flex).
 ![Grid layout](https://fabricweb.azureedge.net/fabric-website/assets/images/grid.svg)
 
 <ExampleSnippet>
-  <Grid styles={{
-    gridTemplateColumns: "repeat(4, 1fr)",
-    msGridColumns: "(1fr)[4]",
-    gridTemplateRows: "50px 150px 50px",
-    msGridRows: "50px 150px 50px",
-  }} >
+  <Grid columns="repeat(4, 1fr)" rows="50px 150px 50px">
     <Segment color="brand" content="Header" inverted styles={{ gridColumn: 'span 4' }} />
     <Segment color="green" content="Menu" inverted styles={{ gridColumn: 'span 1' }} />
     <Segment content="Content" styles={{ gridColumn: 'span 3' }} />
@@ -60,10 +55,7 @@ You can learn more in [Flex component docs](/components/flex).
   </Grid>
 </ExampleSnippet>
 <ExampleSnippet>
-  <Grid styles={{
-    gridTemplateColumns: "repeat(2, 1fr)",
-    msGridColumns: "(1fr)[2]",
-  }} >
+  <Grid columns="repeat(2, 1fr)">
     <Segment color="brand" content="Header" inverted styles={{ gridColumn: '1/3', gridRow: 1 }} />
     <Segment color="red" content="Menu" inverted styles={{ gridColumn: '3', gridRow: '1/3' }} />
     <Segment color="green" content="Notes" inverted styles={{ gridColumn: '1', gridRow: '2' }} />
