chore(react-combobox): migrate to new package structure (#26037)

--- a/packages/react-components/react-combobox/stories/Dropdown/DropdownAccessibility.stories.mdx
+++ b/packages/react-components/react-combobox/stories/Dropdown/DropdownAccessibility.stories.mdx
@@ -1,16 +1,16 @@
 import { Meta } from '@storybook/addon-docs';
-import clickImg from './images/dropdown-click.png';
-import collapsedImg from './images/dropdown-collapsed.png';
-import hoverImg from './images/dropdown-hover.png';
-import keySelectImg from './images/dropdown-key-select.png';
-import multiselect1Img from './images/dropdown-multiselection1.png';
-import multiselect2Img from './images/dropdown-multiselection2.png';
-import navImg from './images/dropdown-nav.png';
-import openImg from './images/dropdown-open.png';
-import optionHoverImg from './images/dropdown-option-hover.png';
-import selectedOpenImg from './images/dropdown-selected-open.png';
-import semanticsImg from './images/dropdown-semantics.png';
-import tabbingImg from './images/dropdown-tabbing.png';
+import clickImg from '../assets/Dropdown/dropdown-click.png';
+import collapsedImg from '../assets/Dropdown/dropdown-collapsed.png';
+import hoverImg from '../assets/Dropdown/dropdown-hover.png';
+import keySelectImg from '../assets/Dropdown/dropdown-key-select.png';
+import multiselect1Img from '../assets/Dropdown/dropdown-multiselection1.png';
+import multiselect2Img from '../assets/Dropdown/dropdown-multiselection2.png';
+import navImg from '../assets/Dropdown/dropdown-nav.png';
+import openImg from '../assets/Dropdown/dropdown-open.png';
+import optionHoverImg from '../assets/Dropdown/dropdown-option-hover.png';
+import selectedOpenImg from '../assets/Dropdown/dropdown-selected-open.png';
+import semanticsImg from '../assets/Dropdown/dropdown-semantics.png';
+import tabbingImg from '../assets/Dropdown/dropdown-tabbing.png';
 
 <Meta title="Concepts/Developer/Accessibility/Components/Dropdown" />
 
