chore(react-components): migrate to new package structure (#26051)

--- a/packages/react-components/react-components/stories/Concepts/Icons/IconTable.stories.mdx
+++ b/packages/react-components/react-components/stories/Concepts/Icons/IconTable.stories.mdx
@@ -18,5 +18,5 @@ function App() {
 ```
 
 <React.Suspense fallback={<Spinner label="Loading..." />}>
-  {React.createElement(React.lazy(() => import('./ReactIconGrid')))}
+  {React.createElement(React.lazy(() => import('../../../src/Concepts/Icons/ReactIconGrid')))}
 </React.Suspense>
