--- a/packages/react-components/react-theme/stories/Theme/colors/index.stories.mdx
+++ b/packages/react-components/react-theme/stories/Theme/colors/index.stories.mdx
@@ -1,17 +1,10 @@
 import { Meta, Canvas } from '@storybook/addon-docs';
 import { Colors } from './ThemeColors.stories.tsx';
-import { Shadows } from './ThemeShadows.stories';
 
-<Meta title="Theme/Color" />
+<Meta title="Theme/Colors" />
 
 <h1 class="sbdocs-title"> Colors </h1>
 
 <Canvas withSource="none">
   <Colors />
-</Canvas>
-
-## Shadows
-
-<Canvas withSource="none">
-  <Shadows />
 </Canvas>
