--- a/packages/react-components/react-theme/stories/Theme/typography/index.stories.mdx
+++ b/packages/react-components/react-theme/stories/Theme/typography/index.stories.mdx
@@ -1,35 +1,9 @@
 import { Meta, Canvas } from '@storybook/addon-docs';
-import { FontFamily, FontSize, FontWeight, LineHeight, TypographyStyles } from './ThemeTypography.stories';
+import { TypographyStyles } from './ThemeTypography.stories';
 
 <Meta title="Theme/Typography" />
 
-<h1 class="sbdocs-title"> Typography </h1>
-
-### Font family
-
-<Canvas withSource="none">
-  <FontFamily />
-</Canvas>
-
-### Font size
-
-<Canvas withSource="none">
-  <FontSize />
-</Canvas>
-
-### Font weight
-
-<Canvas withSource="none">
-  <FontWeight />
-</Canvas>
-
-### Line height
-
-<Canvas withSource="none">
-  <LineHeight />
-</Canvas>
-
-### Typography styles
+<h1 class="sbdocs-title">Typography</h1>
 
 <Canvas withSource="none">
   <TypographyStyles />
