docs: add migration guide for cards from v8 to v9 (#26347)
Co-authored-by: Martin Hochel <hochelmartin@gmail.com>
Fixes https://github.com/microsoft/fluentui/issues/24020

--- a/apps/public-docsite-v9/src/Concepts/Migration/FromV0/Components/Card/Card.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/Migration/FromV0/Components/Card/Card.stories.mdx
@@ -25,14 +25,14 @@ const Component = () => <Card>Lorem ipsum, dolor sit amet consectetur adipisicin
 | Card props        | migration guide                                                                                                                             |
 | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------- |
 | as, className     | keep it as is                                                                                                                               |
-| variables, styles | see Migrate style overrides in this document                                                                                                |
+| variables, styles | see Migrate `style` overrides in this document                                                                                              |
 | accessibility     | see [migrate-custom-accessibility.md](?path=/docs/concepts-migrating-from-v0-custom-accessibility--page). Also check the focusMode new prop |
-| centered          | REMOVED: see Migrate centered prop in this document                                                                                         |
+| centered          | REMOVED: see Migrate `centered` prop in this document                                                                                       |
 | compact           | use `size="small"`                                                                                                                          |
 | disabled          | REMOVED: No equivalent functionality. Can be created by overriding the styles.                                                              |
 | elevated          | REMOVED: All cards are now elevated by default. To change that, use the `appearance` property.                                              |
 | expandable        | REMOVED: No equivalent functionality.                                                                                                       |
-| fluid             | REMOVED: see Migrate fluid prop in this document                                                                                            |
+| fluid             | REMOVED: see Migrate `fluid` prop in this document                                                                                          |
 | ghost             | use `appearance="subtle"`                                                                                                                   |
 | inverted          | use `appearance="filled-alternative"`                                                                                                       |
 | size              | keep it as is. Values: `small`, `medium`(default) and `large`                                                                               |
