--- a/apps/public-docsite-v9/src/Concepts/Migration/FromV0/Components/Card/CardFooter.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/Migration/FromV0/Components/Card/CardFooter.stories.mdx
@@ -27,7 +27,7 @@ const Component = () => <CardFooter Footer="Lorem ipsum" />;
 | CardFooter props  | migration guide                                                                                                                             |
 | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------- |
 | as, className     | keep it as is                                                                                                                               |
-| variables, styles | see Migrate style overrides in this document                                                                                                |
+| variables, styles | see Migrate `style` overrides in this document                                                                                              |
 | accessibility     | see [migrate-custom-accessibility.md](?path=/docs/concepts-migrating-from-v0-custom-accessibility--page). Also check the focusMode new prop |
 | fitted            | REMOVED: By default, all Footers are fitted                                                                                                 |
 
