--- a/apps/public-docsite-v9/src/Concepts/Migration/FromV0/Components/Card/CardPreview.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/Migration/FromV0/Components/Card/CardPreview.stories.mdx
@@ -35,7 +35,7 @@ const Component = () => (
 | CardPreview props | migration guide                                                                                                                             |
 | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------- |
 | as, className     | keep it as is                                                                                                                               |
-| variables, styles | see Migrate style overrides in this document                                                                                                |
+| variables, styles | see Migrate `style` overrides in this document                                                                                              |
 | accessibility     | see [migrate-custom-accessibility.md](?path=/docs/concepts-migrating-from-v0-custom-accessibility--page). Also check the focusMode new prop |
 | fitted            | REMOVED: by default, all Previews are fitted                                                                                                |
 | horizontal        | REMOVED: no longer supported                                                                                                                |
