docs: v9 docs now mention Styling handbook (#26804)
* docs: v9 docs now mention Styling handbook

* Update apps/public-docsite-v9/src/Concepts/StylingComponents.stories.mdx

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

---------

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

--- a/apps/public-docsite-v9/src/Concepts/StylingComponents.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/StylingComponents.stories.mdx
@@ -4,6 +4,10 @@ import { Meta, Source } from '@storybook/addon-docs';
 
 ## Styling components
 
+Visit the **[Styling handbook](https://github.com/microsoft/fluentui/blob/master/rfcs/react-components/styles-handbook.md)** for a comprehensive styling guide, as this article only introduces basics to get you started quickly.
+
+### Getting started
+
 To style Fluent UI React v9 components `makeStyles` is used. `makeStyles` comes from [Griffel](https://griffel.js.org) a homegrown CSS-in-JS implementation which generates atomic CSS classes.
 
 Get started by simply importing:
