--- a/apps/public-docsite-v9/src/Concepts/Migration/FromV0/Components/Toolbar.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/Migration/FromV0/Components/Toolbar.stories.mdx
@@ -226,7 +226,7 @@ const Component = () => {
 | ------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | as, className             | keep it as is                                                                                                                                           |
 | variables, styles, design | see [Migrate style overrides](#./Migrate-style-overrides) in this document                                                                              |
-| accessibility             | see [migrate-custom-accessibility.md](../migrate-custom-accessibility.md)                                                                               |
+| accessibility             | see [migrate-custom-accessibility.md](?path=/docs/concepts-migration-from-v0-custom-accessibility--page)                                                |
 | content                   | see [Migrate content prop](#./Migrate-`content`-prop) in this document                                                                                  |
 | ref, key                  | keep it as is                                                                                                                                           |
 | getOverflowItems          | REMOVED: Use @fluentui/react-overflow to render overflow items                                                                                          |
@@ -279,7 +279,7 @@ Here is comparison for both versions: [Sandbox](https://codesandbox.io/s/toolbar
 
 ## Migrate style overrides
 
-⚠️ **If this is your first migration**, please read [the general guide on how to migrate styles](../migrate-styles.md).
+⚠️ **If this is your first migration**, please read [the general guide on how to migrate styles](?path=/docs/concepts-migration-from-v0-custom-style-overrides--page).
 
 ### Example for migrate boolean `variables`:
 
@@ -411,4 +411,4 @@ const Component = () => (
 
 After:
 
-See [Toolbar Overflow Items example](https://react.fluentui.dev/?path=/docs/preview-components-toolbar--default#overflow-items)
+See [Toolbar Overflow Items example](https://react.fluentui.dev/docs/preview-components-toolbar--default#overflow-items)
