--- a/apps/public-docsite-v9/src/Concepts/SSR/SSR.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/SSR/SSR.stories.mdx
@@ -1,20 +1,20 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Concepts/Developer/Server-Side Rendering/Basic Setup" />
+<Meta title="Concepts/Developer/Server-Side Rendering/Basic setup" />
 
 ## Server-Side Rendering
 
-Fluent UI React v9 fully supports Server-Side Rendering.
+Fluent UI React v9 supports Server-Side Rendering.
 
 ### Basic setup
 
 Add `@fluentui/react-components` dependency:
 
-```sh
-// yarn
+```shell
+# Using Yarn
 yarn add @fluentui/react-components
 
-//npm
+# Using NPM
 npm install @fluentui/react-components
 ```
 
