--- a/apps/public-docsite-v9/src/Concepts/SSR/Portals.stories.mdx
+++ b/apps/public-docsite-v9/src/Concepts/SSR/Portals.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from '@storybook/addon-docs';
 import { SSRDefaultOpen } from './MenuSSRDefaultOpen.stories';
 
-<Meta title="Concepts/Developer/Server-Side Rendering/Portals" />
+<Meta title="Concepts/Developer/Server-Side Rendering/Limitations with Portals" />
 
 ## React Portals
 
